nuevo cambio en título

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <body>
     <!-- -------------HEADER---------------- -->
     <header class="py-3 text-center">
-        <h1>Rene Alejandro Cerón</span></h1>
+        <h1>Rene</span></h1>
     </header>
 
     <!-- -------------NAV---------------- -->
